添加剪贴板API覆盖功能，通过父页面代理实现剪贴板操作，并在文档编辑器中引入相关脚本。

--- a/apps/documenteditor/main/index.html
+++ b/apps/documenteditor/main/index.html
@@ -292,6 +292,7 @@
 <body role="application">
     <script src="../../common/main/lib/util/htmlutils.js"></script>
     <script src="../../common/main/lib/util/docserviceworker.js"></script>
+    <script src="../../common/main/lib/util/clipboard.js"></script>
     <div id="loading-mask" class="loadmask">
         <div class="brendpanel" style="display: none;">
             <div><div class="spacer"></div><div class="circle"></div></div><div><span class="rect"></span><span class="rect"></span><span class="rect"></span><span class="rect"></span><span class="rect"></span><span class="rect"></span></div></div>
